small edits to the prod files

--- a/.pylintrc
+++ b/.pylintrc
@@ -436,11 +436,13 @@ disable=raw-checker-failed,
         suppressed-message,
         useless-suppression,
         deprecated-pragma,
+        too-few-public-methods,
         use-symbolic-message-instead,
         use-implicit-booleaness-not-comparison-to-string,
         use-implicit-booleaness-not-comparison-to-zero,
         R0801, # duplicate-code
         C0301,  # line-too-long
+        W1203, # use lazy formatting for logging functions
         too-few-public-methods
 
 # Enable the message, report, category or checker with the given id(s). You can
