--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint black mypy pytest fastapi httpx
+        python -m pip install -f requirements_fixed.txt
 
     - name: Run pylint
       run: |
