--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install -f requirements_fixed.txt
+        python -m pip install -r requirements_fixed.txt
         python -m pip install --upgrade pip
 
     - name: Run pylint
