--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -30,12 +30,12 @@ jobs:
 
     - name: Run pylint
       run: |
-        pylint tests/
+        pylint --rcfile=.pylintrc
 
-    - name: Run mypy
+    - name: Run mypy on assignment4
       run: |
-        mypy .
+        mypy assignment4
 
-    - name: Run pytest
+    - name: Run pytest on assignment4
       run: |
-        pytest tests
+        pytest assignment4/tests
