--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -2,13 +2,9 @@ name: Python Checks
 
 on:
   push:
-    branches:
-      - main
-      - prod
+    branches: [main, prod]
   pull_request:
-    branches:
-      - main
-      - prod
+    branches: [main, prod]
 
 jobs:
   checks:
@@ -23,23 +19,25 @@ jobs:
       with:
         python-version: '3.x'
 
+    - name: Cache pip
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements_fixed.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
     - name: Install dependencies
       run: |
-        python -m pip install -r requirements_fixed.txt
-        python -m pip install pylint
-        python -m pip install mypy
-        python -m pip install pytest
         python -m pip install --upgrade pip
-
+        pip install -r requirements_fixed.txt
+        pip install pylint mypy pytest
 
     - name: Run pylint
-      run: |
-        pylint --rcfile=.pylintrc
+      run: pylint --rcfile=.pylintrc assignment4/ tests/
 
-    - name: Run mypy on assignment4
-      run: |
-        mypy assignment4
+    - name: Run mypy
+      run: mypy assignment4
 
-    - name: Run pytest on assignment4
-      run: |
-        pytest assignment4/tests
+    - name: Run tests
+      run: pytest assignment4/tests
