--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements_fixed.txt
-        pip install pylint mypy pytest
+        pip install pylint mypy pytest types-requests
 
     - name: Run pylint
       run: pylint --rcfile=.pylintrc assignment4/ assignment4/tests/
