--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-            context: .
+            context: ./assignment4
             file: Dockerfile_personal
             push: ${{ github.event_name != 'pull_request' }}
             tags: |
