--- a/.github/workflows/python_checks.yml
+++ b/.github/workflows/python_checks.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.11'
 
     - name: Cache pip
       uses: actions/cache@v3
@@ -30,6 +30,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install --no-cache-dir torch --index-url https://download.pytorch.org/whl/cpu
+        pip install --no-cache-dir scipy numpy
         pip install -r requirements_fixed.txt
         pip install pylint mypy pytest types-requests
 
