--- a/requirements_fixed.txt
+++ b/requirements_fixed.txt
@@ -49,6 +49,7 @@ requests==2.32.3
 rpds-py==0.25.1
 safetensors==0.5.3
 scikit-learn==1.6.1
+scipy==1.15.3
 sentence-transformers==4.1.0
 six==1.17.0
 smmap==5.0.2
